traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:6: error: Invalid literal number
    for(i<-0to getMondeLargeur()-1){
           ^TraversalByColumn:6: error: illegal start of simple expression
    for(i<-0to getMondeLargeur()-1){
           ^TraversalByColumn:12: error: ')' expected but '}' found.
  }while(!posFinale(x,y))
  ^